--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,8 +41,6 @@ dependencies:
   mobx: ^2.1.3+1
   mobx_codegen: ^2.1.1
   flutter_mobx: ^2.0.6+5
-  #firebase & database
-
   #local database
   shared_preferences: ^2.0.17
   #watch
@@ -53,11 +51,26 @@ dependencies:
   #ui properties
   google_fonts: ^4.0.3
   flutter_svg: ^1.1.6
+  #custom file
   file_picker: ^5.2.5
+  #camera service
   camera: ^0.10.5+2
   permission_handler: ^10.2.0
+  #firebase database for store images
+  firebase: ^9.0.3
+  firebase_core: ^2.13.1
+  firebase_storage: ^11.2.2
+  cloud_firestore: ^4.8.0
+  google_nav_bar: ^5.0.6
+  google_mobile_ads: ^3.0.0
+  font_awesome: ^5.10.1
+  font_awesome_flutter: ^10.4.0
+
+
 
 dev_dependencies:
+  json_serializable: ^6.6.1
+
   flutter_test:
     sdk: flutter
 
@@ -80,9 +93,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  - assets/image/svg/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
