--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.6 <3.0.0'
+  sdk: ">=2.18.2 <3.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -51,9 +52,11 @@ dependencies:
   #ui properties
   google_fonts: ^4.0.3
   flutter_svg: ^1.1.6
+  font_awesome_flutter: ^10.4.0
+  google_nav_bar: ^5.0.6
   #custom file
   file_picker: ^5.2.5
-  #camera service
+  #android service
   camera: ^0.10.5+2
   permission_handler: ^10.2.0
   #firebase database for store images
@@ -61,10 +64,9 @@ dependencies:
   firebase_core: ^2.13.1
   firebase_storage: ^11.2.2
   cloud_firestore: ^4.8.0
-  google_nav_bar: ^5.0.6
+  #Purchase | AdMob
   google_mobile_ads: ^3.0.0
-  font_awesome: ^5.10.1
-  font_awesome_flutter: ^10.4.0
+  in_app_purchase: ^3.1.7
 
 
 
@@ -95,7 +97,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/image/svg/
-
+  - assets/image/png/
+  - pubspec.yaml
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
