--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   mobx: ^2.1.3+1
   mobx_codegen: ^2.1.1
   flutter_mobx: ^2.0.6+5
-  #local database
+  #local database 
   shared_preferences: ^2.0.17
   #watch
   build_runner: ^2.3.3
@@ -67,11 +67,21 @@ dependencies:
   #Purchase | AdMob
   google_mobile_ads: ^3.0.0
   in_app_purchase: ^3.1.7
+  rename: ^2.1.1
 
 
 
 dev_dependencies:
   json_serializable: ^6.6.1
+  flutter_launcher_icons: ^0.13.1
+
+
+flutter_launcher_icons: 
+  android: "launcher_icon"
+  ios: false
+  image_path: "assets/logo/logo.png"
+  min_sdk_android: 21 
+
 
   flutter_test:
     sdk: flutter
