--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,8 +77,8 @@ dev_dependencies:
 
 
 flutter_launcher_icons: 
-  android: "launcher_icon"
   ios: false
+  android: true
   image_path: "assets/logo/logo.png"
   min_sdk_android: 21 
 
