--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -85,5 +85,6 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.android.gms:play-services-ads:22.1.0'
-
+    implementation 'com.google.android.ump:user-messaging-platform:2.0.0'
+    
 }
