--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.1.0+2
 
 environment:
   sdk: ">=2.18.2 <3.0.0"
@@ -36,7 +36,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^1.0.5
   #state management
   flutter_riverpod: ^2.1.3
   mobx: ^2.1.3+1
@@ -51,7 +51,7 @@ dependencies:
   auto_route_generator: ^5.0.3
   #ui properties
   google_fonts: ^4.0.3
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.7
   font_awesome_flutter: ^10.4.0
   google_nav_bar: ^5.0.6
   #custom file
@@ -61,19 +61,22 @@ dependencies:
   permission_handler: ^10.2.0
   #firebase database for store images
   firebase: ^9.0.3
-  firebase_core: ^2.13.1
-  firebase_storage: ^11.2.2
-  cloud_firestore: ^4.8.0
+  firebase_core: ^2.15.0
+  firebase_storage: ^11.2.5
+  cloud_firestore: ^4.8.3
   #Purchase | AdMob
   google_mobile_ads: ^3.0.0
   in_app_purchase: ^3.1.7
   rename: ^2.1.1
+  gdpr_dialog: ^2.1.1
+  firebase_app_check: ^0.1.5+1
 
 
 
 dev_dependencies:
   json_serializable: ^6.6.1
   flutter_launcher_icons: ^0.13.1
+
 
 
 flutter_launcher_icons: 
